--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700&display=swap");
+
 @layer base {
-  body {
-    @apply text-gray-900;
-  }
+    body {
+        @apply text-gray-900;
+    }
 }
